# sik

./: .gitignore
zadanie1/: CMakeLists.txt  Makefile  client.cc  datagram.h  err.h  server.cc
zadanie2/: CMakeLists.txt  Makefile  client.cpp  server.cpp  siktacka.h  util.h
